--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.0.0"
+    "autoprefixer": "^9.8.0",
+    "gh-pages": "^3.0.0",
+    "postcss-cli": "^7.1.1"
   }
 }
